[package]
name = "dharitri-codec"
version = "0.16.0"
edition = "2021"

authors = ["Andrei Marinica <andrei.marinica@dharitri.com>", "Dharitri Network <contact@dharitri.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/DharitriNetwork/dharitri-wasm-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Lightweight binary serializer/deserializer, written especially for Dharitri smart contracts"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[features]
derive = ["dharitri-codec-derive"]
alloc = []

[dependencies.dharitri-codec-derive]
path = "../dharitri-codec-derive"
version = "=0.16.0"
optional = true

[dependencies]
wee_alloc = "0.4"
arrayvec = { version = "0.7.1", default-features = false }
num-bigint = { version = "0.4.2", optional = true } # can only be used in std contexts

[dev-dependencies.dharitri-codec-derive]
path = "../dharitri-codec-derive"
version = "=0.16.0"
