[package]
name = "dharitri-wasm-debug"
version = "0.38.0"
edition = "2021"

authors = [
    "Andrei Marinica <andrei.marinica@dharitri.com>",
    "Dharitri Network <contact@dharitri.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/DharitriNetwork/dharitri-wasm-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri WebAssembly smart contract API debugging mocks and utils"
keywords = ["dharitri", "blockchain", "contract", "debug"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
sha2 = "0.9.2"
sha3 = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
rand_pcg = "0.2.1"
rand_seeder = "0.2.2"
rustc_version = "0.4"
toml = { version = "0.5.8", features = ["preserve_order"] }
pathdiff = "0.2.1"
ed25519-dalek = "1.0.1"
itertools = "0.10.3"
bech32 = "0.9.0"

[features]
denali-go-tests = []

[dependencies.dharitri-wasm]
version = "=0.38.0"
path = "../dharitri-wasm"
features = ["alloc", "num-bigint", "promises", "big-float"]

[dependencies.denali]
version = "0.18.0"
path = "../denali"
