[package]
name = "dharitri-wasm-modules"
version = "0.38.0"
edition = "2021"

authors = ["Dharitri Network <contact@dharitri.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/DharitriNetwork/dharitri-wasm-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri WebAssembly standard smart contract modules"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies"]

[features]
alloc = ["dharitri-wasm/alloc"]

[dependencies.dharitri-wasm]
version = "0.38.0"
path = "../dharitri-wasm"
