[package]
name = "dharitri-wasm-node"
version = "0.38.0"
edition = "2021"

authors = ["Andrei Marinica <andrei.marinica@dharitri.com>", "Dharitri Network <contact@dharitri.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/DharitriNetwork/dharitri-wasm-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri WebAssembly VM API wrapper"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools::ffi"]

[features]
vm-validate-token-identifier = []
vm-dct-local-roles = []
ei-unmanaged-node = []

[dependencies.dharitri-wasm]
version = "=0.38.0"
path = "../dharitri-wasm"
