[package]
name = "dharitri-wasm-output"
version = "0.38.0"
edition = "2021"

authors = ["Andrei Marinica <andrei.marinica@dharitri.com>", "Dharitri Network <contact@dharitri.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/DharitriNetwork/dharitri-wasm-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri WebAssembly panic handler and allocator declaration for the .wasm output"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools::ffi"]

[features]
# crate functionality can be turned off
# is only turned off when running the framework tests
wasm-output-mode = [] 

# only provide panic messages if so configured
# they add a lot of bloat to the final bytecode,
# so only use them if you really need to learn about a certain panic occuring at some point
panic-message = [] 

[dependencies]
wee_alloc = "0.4"

[dependencies.dharitri-wasm-node]
version = "=0.38.0"
path = "../dharitri-wasm-node"
