[package]
name = "dharitri-wasm"
version = "0.38.0"
edition = "2021"

authors = ["Andrei Marinica <andrei.marinica@dharitri.com>", "Dharitri Network <contact@dharitri.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/DharitriNetwork/dharitri-wasm-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri WebAssembly smart contract API"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[features]
num-bigint = ["dharitri-codec/num-bigint"]
alloc = ["dharitri-codec/alloc"]
ei-unmanaged = ["alloc"]
promises = []
big-float = []
dct-token-payment-legacy-decode = []

[dependencies]
wee_alloc = "0.4"
hashbrown = "0.11.2"
hex-literal = "0.3.1"
bitflags = "1.3.2"

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.dharitri-wasm-derive]
version = "=0.38.0"
path = "../dharitri-wasm-derive"

[dependencies.dharitri-codec]
version = "=0.16.0"
path = "../dharitri-codec"
features = ["derive"]
