[package]
name = "dharitri-sc-wmoa-swap"
version = "0.10.8"

authors = [
    "Dorin Iancu <dorin.iancu@dharitri.com>",
    "Dharitri Network <contact@dharitri.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Battula-anil-app-could/dx-sdk-rs-new"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri Price aggregator Smart Contract"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies"]
edition = "2021"

[lib]
path = "src/wmoa.rs"

[dependencies.dharitri-wasm]
version = "0.10.8"
path = "../../../dharitri-wasm"

[dependencies.dharitri-wasm-modules]
version = "0.10.8"
path = "../../../dharitri-wasm-modules"

[dev-dependencies.dharitri-wasm-debug]
version = "0.10.8"
path = "../../../dharitri-wasm-debug"
