[package]
name = "dct-transfer-with-fee"
version = "0.0.0"
authors = ["Alin Cruceat <alin.cruceat@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/dct_transfer_with_fee.rs"

[dependencies.dharitri-wasm]
version = "0.38.0"
path = "../../../dharitri-wasm"

[dev-dependencies.dharitri-wasm-debug]
version = "0.38.0"
path = "../../../dharitri-wasm-debug"
