[package]
name = "empty"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/empty.rs"

[dependencies.dharitri-wasm]
version = "0.38.0"
path = "../../../dharitri-wasm"

[dev-dependencies.dharitri-wasm-debug]
version = "0.38.0"
path = "../../../dharitri-wasm-debug"

[dev-dependencies]
num-bigint = "0.4.2"
