[package]
name = "nft-minter"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.dharitri-wasm]
version = "0.38.0"
path = "../../../dharitri-wasm"

[dev-dependencies.dharitri-wasm-debug]
version = "0.38.0"
path = "../../../dharitri-wasm-debug"
