[package]
name = "seed-nft-minter"
version = "0.0.0"
authors = ["Claudiu-Marcel Bruda <claudiu.bruda@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/seed_nft_minter.rs"

[dependencies.dharitri-wasm]
version = "0.38.0"
path = "../../../dharitri-wasm"

[dependencies.dharitri-wasm-modules]
version = "0.38.0"
path = "../../../dharitri-wasm-modules"

[dev-dependencies.dharitri-wasm-debug]
version = "0.38.0"
path = "../../../dharitri-wasm-debug"
