[package]
name = "basic-features"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/basic_features_main.rs"

[dependencies.dharitri-wasm]
version = "0.38.0"
path = "../../../dharitri-wasm"

[dev-dependencies.dharitri-wasm-debug]
version = "0.38.0"
path = "../../../dharitri-wasm-debug"

[dependencies.dharitri-wasm-modules]
version = "0.38.0"
path = "../../../dharitri-wasm-modules"

[dev-dependencies.dct-system-sc-mock]
path = "../dct-system-sc-mock"
